fix: visibility of heap not changing

--- a/src/public/stylesheets/default.css
+++ b/src/public/stylesheets/default.css
@@ -4,6 +4,7 @@
 
 body.hide-cpu .container.cpu,
 body.hide-mem .container.mem,
+body.hide-heap .container.heap,
 body.hide-load .container.load,
 body.hide-responseTime .container.responseTime,
 body.hide-rps .container.rps,
